--- a/exhibition.html
+++ b/exhibition.html
@@ -46,7 +46,7 @@ https://templatemo.com/tm-561-purple-buzz
                             <a class="nav-link btn-outline-primary rounded-pill px-3" href="index.html">홈</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn-outline-primary rounded-pill px-3" href="work.html">전시회</a>
+                            <a class="nav-link btn-outline-primary rounded-pill px-3" href="exhibition.html">전시회</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link btn-outline-primary rounded-pill px-3" href="pricing.html">함께 보러 가요</a>
@@ -157,7 +157,7 @@ https://templatemo.com/tm-561-purple-buzz
                                 <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="about.html">About Us</a>
                             </li>
                             <li class="pb-2">
-                                <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="work.html">Work</a>
+                                <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="exhibition.html">Work</a>
                             </li>
                             <li class="pb-2">
                                 <i class='bx-fw bx bxs-chevron-right bx-xs'></i></i><a class="text-decoration-none text-light py-1" href="pricing.html">Price</a>
@@ -275,7 +275,7 @@ https://templatemo.com/tm-561-purple-buzz
         let html = '';
         contents.result.content.forEach(element => {
           html += `
-          <a href=${element.price !== "무료" ? "work-single.html?id="+element.id : element.detailInfoUrl} target=${element.price === "무료" ? "_blank" : "_self"} class="col-sm-6 col-lg-4 text-decoration-none exhibition freeExhibition">
+          <a href=${element.price !== "무료" ? "exhibition-single.html?id="+element.id : element.detailInfoUrl} target=${element.price === "무료" ? "_blank" : "_self"} class="col-sm-6 col-lg-4 text-decoration-none exhibition freeExhibition">
               <div class="service-work overflow-hidden card mx-5 mx-sm-0 mb-5">
                   <img class="card-img-top" src=${element.mainImgUrl} alt="...">
                   <div class="card-body">
@@ -337,13 +337,13 @@ https://templatemo.com/tm-561-purple-buzz
         function getExhibition(price = 0) {
             let p;
             if (price === 0) {
-                window.history.replaceState('', '', window.location.origin + '/work.html');
+                window.history.replaceState('', '', window.location.origin + '/exhibition.html');
                 p = ""
             } else if (price === 1) {
-                window.history.replaceState('', '', window.location.origin + '/work.html?price=유료');
+                window.history.replaceState('', '', window.location.origin + '/exhibition.html?price=유료');
                 p = "price=유료"
             } else if (price === 2) {
-                window.history.replaceState('', '', window.location.origin + '/work.html?price=무료');
+                window.history.replaceState('', '', window.location.origin + '/exhibition.html?price=무료');
                 p = "price=무료"
             }
             fetch(`http://localhost:8080/api/v1/exhibitions?sort=id&${p}`)
@@ -353,7 +353,7 @@ https://templatemo.com/tm-561-purple-buzz
         let html = '';
         contents.result.content.forEach(element => {
           html += `
-          <a href=${element.price !== "무료" ? "work-single.html?id="+element.id : element.detailInfoUrl} target=${element.price === "무료" ? "_blank" : "_self"} class="col-sm-6 col-lg-4 text-decoration-none exhibition freeExhibition">
+          <a href=${element.price !== "무료" ? "exhibition-single.html?id="+element.id : element.detailInfoUrl} target=${element.price === "무료" ? "_blank" : "_self"} class="col-sm-6 col-lg-4 text-decoration-none exhibition freeExhibition">
             <div class="service-work overflow-hidden card mx-5 mx-sm-0 mb-5">
                   <img class="card-img-top" src=${element.mainImgUrl} alt="...">
                   <div class="card-body">
@@ -423,7 +423,7 @@ https://templatemo.com/tm-561-purple-buzz
         console.log(contents.result)
         contents.result.content.forEach(element => {
           html += `
-          <<a href=${element.price !== "무료" ? "work-single.html?id="+element.id : element.detailInfoUrl} target=${element.price === "무료" ? "_blank" : "_self"} class="col-sm-6 col-lg-4 text-decoration-none exhibition freeExhibition">
+          <<a href=${element.price !== "무료" ? "exhibition-single.html?id="+element.id : element.detailInfoUrl} target=${element.price === "무료" ? "_blank" : "_self"} class="col-sm-6 col-lg-4 text-decoration-none exhibition freeExhibition">
             <div class="service-work overflow-hidden card mx-5 mx-sm-0 mb-5">
                   <img class="card-img-top" src=${element.mainImgUrl} alt="...">
                   <div class="card-body">
