--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ https://templatemo.com/tm-561-purple-buzz
                             <a class="nav-link btn-outline-primary rounded-pill px-3" href="index.html">홈</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn-outline-primary rounded-pill px-3" href="work.html">전시회</a>
+                            <a class="nav-link btn-outline-primary rounded-pill px-3" href="exhibition.html">전시회</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link btn-outline-primary rounded-pill px-3" href="pricing.html">함께 보러 가요</a>
